
             - Fixed handling of the title parameter.

        - Fixed an implementation error which resulted in misinterpreted 
          delayed expansion when variable name started with a number.

        - Fixed block parsing systems.

SUNDAY 2ND APRIL

        - Fixed a compilation error on *NIXes.

WEDNESDAY 5TH, MARCH

        - Fixed lots of bugs caused by the new parsing system.

        - Fixed some errors of the for and call command.

        - Fixed the TYPE to make it capable of handling binary files.

SUNDAY 9TH, MARCH

        - Fixed the expansion system to behave closely like cmd does. (ie. 
          made two distinct level of special var expansion, one for the 
          program parameters and one for the other conventionnal special 
          vars).

        - Changed expansion of special var resulting from a FOR to be executed 
          before block execution.

        - Added a safe CTRL-c handler on windows.

        - Merged po files for Dos9.

WEDNESDAY 12TH, APRIL

        - Fixed incorrect block parsing that did not handled properly escaped 
          new line characters that resulted in executing commands as if there 
          was actually more commands than there are really.

        - Added some error messages and new languages message to be used for 
          CTRL-c handler.

        - Fixed many typos.

        - Fixed plenty of tiny bugs.

THURSDAY 13TH, APRIL

        - Added new system that loads the entire script file at once, instead 
          of the weird old mechanics that consisted in opening/reading/closing 
          script at every new line. This achieve a great performance gain.

        - Fixed an error of the Dos9_SetFdInheritance under unices.

        - Fixed the goto command to make it able to deal with label that have 
          spaces inside them.

        - Fixed a bug that prevented i10n to be enabled with simple help 
          modules.

        - Fixed some manual pages.
